  - char-ready? on string ports now also returns #t at EOF, as per R5RS;
    in other words, it always returns #t (thanks to Moritz Heidkamp)
  - Unit srfi-4: Fixed typo that broke SRFI-17 generalised set! syntax
    on s8vectors (thanks to Kristian Lein-Mathisen).
  - Large literals no longer crash with "invalid encoded numeric literal"
    on mingw-64 (#1344, thanks to Lemonboy).

- Syntax expander
  - Renaming an identifier twice no longer results in an undo of the
    rename (fixes #1362, thanks to "megane").

- Build system
  - Fixed broken compilation on NetBSD, due to missing _NETBSD_SOURCE.

- Compiler
  - The scrutinizer no longer uses 'fixnum as the type for fixnums
    that might not fit into a fixnum on 32-bit architectures.


4.12.0

- Security fixes
  - CVE-2016-6830: Fix buffer overrun due to excessively long argument
    or environment lists in process-execute and process-spawn (#1308).
    This also removes unnecessary limitations on the length of
    these lists (thanks to Vasilij Schneidermann).
  - CVE-2016-6831: Fix memory leak in process-execute and
    process-spawn.  If, during argument and environment list
    processing, a list item isn't a string, an exception is thrown,
    in which case previously malloc()ed strings weren't freed.
  - CVE-2016-9954: Irregex has been updated to 0.9.6, which fixes
    an exponential explosion in compilation of nested "+" patterns.

- Compiler:
  - define-constant now correctly keeps symbol values quoted.
  - Warnings are now emitted when using vector-{ref,set!} or one
    of take, drop, list-ref or list-tail with an out of range index
    for vectors and proper lists of a definitely known length.
  - The scrutinizer will no longer drop knowledge of the length of a
    vector.  It still drops types of its contents (which may be mutated).
  - Fixed incorrect argvector restoration after GC in directly
    recursive functions (#1317).
  - "Direct" procedure invocations now also maintain debug info (#894).
